--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "pg": "^8.7.1",
     "pg-hstore": "^2.3.4",
     "qs": "^6.10.3",
-    "sequelize": "^6.17.0"
+    "sequelize": "^6.17.0",
+    "twilio": "^3.76.0"
   }
 }
